# gd_core

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  comandos.md
src/: api.zig  main.zig  root.zig
src/math/: matrix.zig  quaternion.zig  vector.zig
src/util/: config.zig  logger.zig
tests/: CmakeLists.txt  config_test.zig  logger_test.zig  matrix_test.zig  quaternion_test.zig  vector_test.zig
